<resources>
    <string name="app_name">KIT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_contactlist">Contact List</string>
    <string name="title_addcontact">Add Contact</string>
    <string name="title_account_settings">My Account</string>
    <string name="title_editcontact">Edit Contact</string>
    <string name="title_contactdetail">Contact Details</string>
    <string name="text_contactdetail">This is the Contact Details fragment</string>
    <string name="button_view">VIEW</string>
    <string name="button_edit">Edit</string>
    <string name="text_fullname">%s %s</string>
    <string name="header_view_button">See Details</string>
    <string name="header_next_contact">Next Reminder</string>
    <string name="header_last_contact">Last Contact</string>
    <string name="header_name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">E-Mail</string>
    <string name="intervalTime_defaultValue">2</string>
    <string name="text_remind_me_every">Remind me every …</string>
    <string name="intervalUnits_speakable">Interval Units of Time. Days, Weeks, Months, Years</string>
    <string name="intervalTime_speakable_text">Number, such as 2 or 3, representing how many time intervals, such as days or weeks, between contact</string>
    <string name="save_contact">Save Contact</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="toast_contact_added">New Contact Has Been Saved</string>
    <string name="error_interval_number">Number?</string>
    <string name="error_first_name">First name is required</string>
    <string name="error_blank"> </string>
    <string name="never">Never</string>
    <string name="reminder_disabled">Reminders disabled</string>
    <string name="placeholder">Upcoming</string>
    <string name="placeholder_date1">Jan 1, 2023</string>
    <string name="placeholder_date2">Feb 1, 2023</string>
    <string name="last_contact_date">Last Contacted: %s</string>
    <string name="next_contact_date">Next Reminder: %s</string>
    <string name="recycler_contact_date">%s\n%s</string>
    <string name="stringify_integer">%s</string>
    <!-- Spinner Arrays-->
    <string-array name="intervalUnit_array">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reminders_on">Reminders On</string>
    <string name="button_markDone">Mark Done</string>
    <string name="button_delete">Delete</string>
    <string name="contentDescription_contact_email">Contact Email</string>
    <string name="contentDescription_contact_phone_number">Contact Phone Number</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="toast_contact_updated">Contact has been updated</string>
    <string name="toast_contact_not_updated">There was an error updating your contact. Check connection</string>
    <string name="toast_contact_not_added">There was an error adding your new contact. Check connection</string>
    <string name="toast_contact_not_deleted">There was an error deleting your contact. Check connection</string>
    <string name="error_phone_number">Phone Number must be 10 numerical digits, or blank</string>
    <string name="error_email">Invalid e-mail format</string>
    <string name="junktest">Reminders disabled</string>


</resources>