<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_contactlist"
        android:name="com.example.kit.ui.contactlist.ContactListFragment"
        android:label="@string/title_contactlist"
        tools:layout="@layout/fragment_contact_list">
        <action
            android:id="@+id/action_navigation_contactlist_to_contactDetailFragment"
            app:destination="@id/contactDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addContact"
        android:name="com.example.kit.ui.addcontact.AddContactFragment"
        android:label="@string/title_addcontact"
        tools:layout="@layout/fragment_add_contact" />
    <fragment
        android:id="@+id/contactDetailFragment"
        android:name="com.example.kit.ui.contactdetail.ContactDetailFragment"
        android:label="@string/title_contactdetail"
        tools:layout="@layout/fragment_contact_detail" />

    <fragment
        android:id="@+id/editContactFragment"
        android:label="@string/title_editcontact"/>

</navigation>