<?xml version="1.0" encoding="utf-8"?>
<!-- This Constraint layout should maybe be a FrameLayout -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editContactFragment"
            type="com.example.kit.ui.editcontact.EditContactFragment" />
        <variable
            name="contactListViewModel"
            type="com.example.kit.ui.contactlist.ContactListViewModel" />
        <variable
            name="currentContact"
            type="com.example.kit.model.Contact"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.editcontact.EditContactFragment">

            <TextView
                android:id="@+id/title_edit_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding_large"
                android:text="@string/edit_contact"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout_editContact_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/first_name"
                app:errorIconDrawable="@drawable/ic_error"
                app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_edit_contact">
                <!--app:boxStrokeColor="@android:color/primary_text_light"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1" -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_editContact_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{currentContact.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout_editContact_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/last_name"
                app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayout_editContact_firstName">
                <!--app:boxStrokeColor="@android:color/primary_text_light"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1" -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_editContact_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{currentContact.lastName}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout_editContact_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/phone_number"
                app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayout_editContact_lastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_editContact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@{currentContact.phoneNumber}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout_editContact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/email"
                app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayout_editContact_phone">
                <!--app:boxStrokeColor="@android:color/primary_text_light"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1" -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_editContact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@{currentContact.email}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:checked="true"
                android:text="@string/reminders_on"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintStart_toStartOf="@id/textLayout_editContact_email"
                app:layout_constraintTop_toBottomOf="@id/textLayout_editContact_email" />

            <TextView
                android:id="@+id/textView_remind_me_every"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/text_remind_me_every"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="@id/textLayout_editContact_email"
                app:layout_constraintTop_toBottomOf="@id/checkBox" />
            <!-- TODO: Needs functionality to checkbox button-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout_editContact_intervalTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small_4"
                android:layout_weight="1"
                app:errorIconDrawable="@drawable/ic_error"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/textView_remind_me_every">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_editContact_intervalTime"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="@{@string/stringify_integer(currentContact.intervalTime)}"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spinner_interval_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/intervalUnits_speakable"
                android:entries="@array/intervalUnit_array"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                android:textSize="14pt"
                app:layout_constraintBottom_toBottomOf="@id/textLayout_editContact_intervalTime"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="@id/textLayout_editContact_intervalTime" />

            <Button
                android:id="@+id/button_edit_contact_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_xlarge_32"
                android:onClickListener="@{() -> editContactFragment.onSubmitted()}"
                android:paddingHorizontal="@dimen/padding_large"
                android:text="@string/save_contact"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayout_editContact_intervalTime" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>